# seaquest-projects

./: README.md  mixing_sys_readme.md
e906-root-ana/: .gitignore  README.md  setup.sh
e906-root-ana/opts/: 67.opts  dataset_6.opts
e906-root-ana/src/: AnaBase.cc  AnaBase.h  AnaChamHit.cc  AnaChamHit.h  AnaDimuon.cc  AnaDimuon.h  AnaHitMatrix.cc  AnaHitMatrix.h  AnaHitTree.cc  AnaHitTree.h  AnaHodoTime.cc  AnaHodoTime.h  AnaNim3.cc  AnaNim3.h  AnaOccupancy.cc  AnaOccupancy.h  AnaSortMixVertex.cc  AnaSortMixVertex.h  CMakeLists.txt  Doxyfile  LinkDef.h  RunList.cc  RunList.h  TreeData.cc  TreeData.h  UtilBeam.cc  UtilBeam.h  UtilHist.cc  UtilHist.h  UtilTarget.cc  UtilTarget.h  UtilTdc.cc  UtilTdc.h
e906-root-ana/src/doxygen/: e906-root-ana.css  mainpage.h
e906-root-ana/work_gpvm/: .gitignore  AnaStep1.C  AnaStep2.C  MacroCommon.C  README.md  exec-step1-sub.sh  exec-step1.sh
e906-root-ana/work_rivanna/: .gitignore  AnaStep1.C  AnaStep2.C  README.md  exec-step1.sh
e906_gmc/: README.md  make-input-list.sh  process_all_embed.sh  process_all_realization.sh  process_embed_inte.sh  process_realization.sh  tracking.conf  vertexing.conf
jpsi_polarization/GPR_project/: README.md
jpsi_polarization/GPR_project/notebooks/: Dump_gpr_binning.ipynb  LD2_gpr_check.ipynb  gpr_sanity_check_gmc.ipynb  gpr_sanity_mixed.ipynb
jpsi_polarization/GPR_project/notebooks/.ipynb_checkpoints/: Dump_gpr_binning_v1-checkpoint.ipynb
jpsi_polarization/GPR_project/notebooks/help_class/.ipynb_checkpoints/: model-checkpoint.py
python_notebooks/: gpr_e906.ipynb
supplement_codes/: README.md
supplement_codes/plot_macros/: draw.C
supplement_codes/src/: AnaNMSU.cc  AnaNMSU.h  FinalTree.cc  FinalTree.h  VertexFitDump.cxx  VertexFitDump.h
supplement_codes/work_gpvm/: RunFinalTree.C  manage_failedjobs.sh
